Add the CSS for the list items and extra example

--- a/demo/index.html
+++ b/demo/index.html
@@ -13,6 +13,16 @@
 				<h2>Github Notification Received!</h2>
 				Kamran has a new git repository. Go checkit out at <a href="http://github.com/kamranahmedse">github</a>
 			</div>
+			<div class="jq-toast-single">
+				<h2 class="jq-toast-heading">Brothers for life</h2>
+				<ul class="jq-toast-ul">
+					<li class="jq-toast-li" id="jq-toast-item-0">Adnan Ahmed</li>
+					<li class="jq-toast-li" id="jq-toast-item-1">Kamran Ahmed</li>
+					<li class="jq-toast-li" id="jq-toast-item-2">Zeeshan Ahmed</li>
+					<li class="jq-toast-li" id="jq-toast-item-3">Farhan Ahmed</li>
+					<li class="jq-toast-li" id="jq-toast-item-3">Furqan</li>
+				</ul>
+			</div>
 		</div>
 	</body>
 </html>
