Assign proprietry name to the files

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 		<title>Toast : A jQuery plugin</title>
 		<script src="js/jquery.js"></script>
 		<script src="js/jquery.toast.js"></script>
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/jq-toast.css">
 	</head>
 	<body>
 		<div class="jq-toast-wrap">
